metadata for linkedin preview

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+    <meta property='og:image' content='https://raw.githubusercontent.com/rcureta/react-portfolio/master/src/components/assets/preview.PNG'/>
     <meta name="description" content="Ryan Ureta, a full stack developer based in San Diego." />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./styles/normalize.css" />
