--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="google-site-verification" content="9zBi8JSOhRre9Caq4BxOG4COZQBoj0Ofp7w0SVL43rk" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <meta property='og:image' content='https://raw.githubusercontent.com/rcureta/react-portfolio/master/src/components/assets/preview.PNG'/>
     <meta name="description" content="Ryan Ureta, a full stack developer based in San Diego." />
